# cpp-http-server

./: .gitignore  CMakeLists.txt  README.MD  build.sh  main.cpp
App/: app.cpp
App/controllers/: ControllerBase.cpp  ControllerBase.h  UserController.h
App/models/: Models.cpp  Models.h
App/services/: UserService.cpp  UserService.h
Testing/node-server/: app.js  package-lock.json  package.json
app_crud_api/: app.cpp
app_crud_api/controllers/: ComputationController.h  ControllerBase.h  TaskController.h  UserController.h
app_crud_api/data/: DataStorage.cpp  DataStorage.h  auth_tokens.json  tasks.json  users.json
app_crud_api/dto/: RequestDtos.cpp  RequestDtos.h  ResponseDto.h  ResponseDtos.h
app_crud_api/middlewares/: Middlewares.cpp  Middlewares.h
app_crud_api/models/: Models.cpp  Models.h
app_crud_api/services/: AuthService.cpp  AuthService.h  ComputationService.cpp  ComputationService.h  TaskService.cpp  TaskService.h  TaskWorkerService.cpp  TaskWorkerService.h  UserService.cpp  UserService.h
core/: Request.cpp  Request.h  Router.cpp  Router.h  Server.cpp  Server.h
core/exceptions/: Exceptions.h
core/http_server/: Request.cpp  Request.h  Router.cpp  Router.h  Server.cpp  Server.h
core/http_server/concurrency/: Executor.cpp  Executor.h  ThreadPool.cpp  ThreadPool.h
core/http_server/exceptions/: Exceptions.h
core/http_server/utils/: Logging.cpp  Logging.h  types.cpp  types.h  utils.cpp  utils.h
core/utils/: types.cpp  types.h  utils.cpp
testing/: CMakeLists.txt  request_obj_test.cpp  thread_pool_test.cpp
